# imu

./: .gitignore  Makefile  README.md  bar_main.c  bar_main.h  bar_shell.c  bar_shell.h  blink_main.c  halconf.h  i2c_sensors.c  i2c_sensors.h  main.c  main.h  mcuconf.h  shell_main.c  shell_main.h  shell_utils.h  usb_main.c
boards/DevEBox_H743/: board.h  board.mk
cfg/: chconf.h  halconf.h  mcuconf.h
doc/: Requirements_v1.ods  pinouts.txt
doc/investigations/: 01_mutex_hard_fault
inc/: altimeter.h  barometer.h  barometer_shell.h  blackbox.h  blink.h  bmp280.h  buzzer.h  controller.h  display.h  gnss.h  gps.h  ground_control.h  gyro.h  gyro_shell.h  i2c_sensors.h  icm20689.h  imu.h  mpu6050.h  pg.h  pg_configuration.h  rx.h  sbus.h  sbus_shell.h  servo.h  shell_init.h  shell_utils.h  shellconf.h  system.h  tasks.h
include/: bar_main.h  bar_shell.h  blink_main.h  gyr_main.h  gyr_shell.h  halconf.h  i2c_sensors.h  mag_main.h  mag_shell.h  main.h  ms5611.h  shell_main.h  shellconf.h  system_main.h  usb_main.h
scripts/: gdb.sh  openocd.sh
src/: altimeter.c  bar_main.c  bar_shell.c  barometer.c  barometer_shell.c  blackbox.c  blink.c  blink_main.c  buzzer.c  controller.c  display.c  gnss.c  gps.c  ground_control.c  gyr_main.c  gyr_shell.c  gyro.c  gyro_shell.c  i2c_sensors.c  imu.c  mag_main.c  mag_shell.c  main.c  rx.c  sbus.c  sbus_shell.c  servo.c  shell_init.c  shell_main.c  shell_utils.c  system.c  system_main.c  tasks.c  usb_main.c
tools/: bar.py  ms5611_crc_test.c
tools/alt/: pyproject.toml
tools/alt/alt/: alt.py
tools/alt/tests/: test_alt.py
(+14 files in other folders)
